--- a/fresh_potato.html
+++ b/fresh_potato.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8">
     <title>Fresh Patato!</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 
@@ -20,14 +18,46 @@
 </div>
 
         
-<div class="col-md-4">
-    <img src="http://placehold.it/250x300" data-toggle="modal" data-target="#modal_0" class="img-responsive center-block img-thumbnail" alt="Responsive image">
-    <h4 class="text-center">X-Men: Apocalypse</h4>
-</div>
+<div class="row">
 
 <div class="col-md-4">
-    <img src="http://placehold.it/250x300" data-toggle="modal" data-target="#modal_1" class="img-responsive center-block img-thumbnail" alt="Responsive image">
-    <h4 class="text-center">X-Men: Apocalypse</h4>
+    <img width="220" height="340" src="http://vignette3.wikia.nocookie.net/transformers/images/9/94/Transformers_Age_of_Extinction_Poster.jpeg/revision/latest?cb=20141123051730" data-toggle="modal" data-target="#modal_0" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Transformers: Age of Extinction</h4>
+</div>
+
+
+<div class="col-md-4">
+    <img width="220" height="340" src="http://cdn1-www.comingsoon.net/assets/uploads/gallery/mechanic-resurrection/mechanicposter.jpg" data-toggle="modal" data-target="#modal_1" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Mechanic: Resurrection</h4>
+</div>
+
+
+<div class="col-md-4">
+    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_2" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Finding Dory</h4>
+</div>
+
+</div>
+
+<div class="row">
+
+<div class="col-md-4">
+    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_3" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Finding Dory</h4>
+</div>
+
+
+<div class="col-md-4">
+    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_4" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Finding Dory</h4>
+</div>
+
+
+<div class="col-md-4">
+    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_5" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">Finding Dory</h4>
+</div>
+
 </div>
 
     </div>
@@ -39,15 +69,19 @@
     <!-- Modal content-->
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title">X-Men: Apocalypse</h4>
+            <h4 class="modal-title">Transformers: Age of Extinction</h4>
         </div>
 
         <div class="modal-body">
-            <p>movie story line</p>
+            <p>Autobots must <escape></escape> sight from a bounty hunter who                           has taken control of the human serendipity:                           Unexpectedly, Optimus Prime and his remaining gang                           turn to a mechanic, his daughter, and her back                           street racing boyfriend for help.</p>
+            <p><b>Director: </b>Michael Bay</p>
+            <p><b>Rating: </b>PG-13</p>
+            <p><b>Duration: </b>2h 45min</p>
+            <p><b>Genre: </b>Action, Adventure, Sci-Fi</p>
         </div>
 
         <div class="modal-footer">
-            <a class="btn btn-default" href="http://www.youtube.com/watch?v=N0io2w_6vT8" role="button" data-width="800" data-height="420">YouTube Trailer</a> 
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=Ru0rnAkekOs" role="button" data-width="800" data-height="420">YouTube Trailer</a>
         </div>
 </div>
 
@@ -62,15 +96,127 @@
     <!-- Modal content-->
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title">X-Men: Apocalypse</h4>
+            <h4 class="modal-title">Mechanic: Resurrection</h4>
         </div>
 
         <div class="modal-body">
-            <p>movie story line</p>
+            <p>Arthur Bishop thought he had put his murderous past                           behind him when his most formidable foe kidnaps the                           love of his life. Now he is forced to travel the                           globe to complete three impossible assassinations,                           and do what he does best, make them look like                           accidents.</p>
+            <p><b>Director: </b>Dennis Gansel</p>
+            <p><b>Rating: </b>R</p>
+            <p><b>Duration: </b>2h 15min</p>
+            <p><b>Genre: </b>Action, Crime, Thriller</p>
         </div>
 
         <div class="modal-footer">
-            <a class="btn btn-default" href="http://www.youtube.com/watch?v=N0io2w_6vT8" role="button" data-width="800" data-height="420">YouTube Trailer</a> 
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=QF903RaKLvs" role="button" data-width="800" data-height="420">YouTube Trailer</a>
+        </div>
+</div>
+
+</div>
+</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modal_2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+    <!-- Modal content-->
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Finding Dory</h4>
+        </div>
+
+        <div class="modal-body">
+            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
+            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
+            <p><b>Rating: </b>PG</p>
+            <p><b>Duration: </b>1h 43min</p>
+            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
+        </div>
+
+        <div class="modal-footer">
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
+        </div>
+</div>
+
+</div>
+</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modal_3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+    <!-- Modal content-->
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Finding Dory</h4>
+        </div>
+
+        <div class="modal-body">
+            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
+            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
+            <p><b>Rating: </b>PG</p>
+            <p><b>Duration: </b>1h 43min</p>
+            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
+        </div>
+
+        <div class="modal-footer">
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
+        </div>
+</div>
+
+</div>
+</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modal_4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+    <!-- Modal content-->
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Finding Dory</h4>
+        </div>
+
+        <div class="modal-body">
+            <p>The friendly-but-forgetful blue tang fish reunites                          with her loved ones, and everyone learns a few                          things about the real meaning of family along                          the way.</p>
+            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
+            <p><b>Rating: </b>PG</p>
+            <p><b>Duration: </b>1h 43min</p>
+            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
+        </div>
+
+        <div class="modal-footer">
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
+        </div>
+</div>
+
+</div>
+</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modal_5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+    <!-- Modal content-->
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Finding Dory</h4>
+        </div>
+
+        <div class="modal-body">
+            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
+            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
+            <p><b>Rating: </b>PG</p>
+            <p><b>Duration: </b>1h 43min</p>
+            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
+        </div>
+
+        <div class="modal-footer">
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
         </div>
 </div>
 
@@ -90,6 +236,8 @@
 </div>
 </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script>
 // REQUIRED: "jQuery Query Parser" plugin.
 // https://github.com/mattsnider/jquery-plugin-query-parser
