added css and .js local files

--- a/fresh_potato.html
+++ b/fresh_potato.html
@@ -40,25 +40,31 @@
 </div>
 
 <div class="row">
+    <div class="col-md-12">
+        <br>
+        <br>
+    </div>
+</div>
+
+
+<div class="row">
 
 <div class="col-md-4">
-    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_3" class="img-responsive center-block img-thumbnail" alt="Responsive image">
-    <h4 class="text-center">Finding Dory</h4>
+    <img width="220" height="340" src="https://upload.wikimedia.org/wikipedia/en/b/b9/Conjuring_2.jpg" data-toggle="modal" data-target="#modal_3" class="img-responsive center-block img-thumbnail" alt="Responsive image">
+    <h4 class="text-center">The Conjuring 2</h4>
 </div>
 
 
-<div class="col-md-4">
-    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_4" class="img-responsive center-block img-thumbnail" alt="Responsive image">
-    <h4 class="text-center">Finding Dory</h4>
-</div>
-
-
-<div class="col-md-4">
-    <img width="220" height="340" src="http://vignette4.wikia.nocookie.net/pixar/images/0/0e/FINDING_DORY_-_Key_Art.jpg/revision/latest?cb=20160515234044" data-toggle="modal" data-target="#modal_5" class="img-responsive center-block img-thumbnail" alt="Responsive image">
-    <h4 class="text-center">Finding Dory</h4>
-</div>
 
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <br>
+        <br>
+    </div>
+</div>
+
 
     </div>
     
@@ -73,7 +79,7 @@
         </div>
 
         <div class="modal-body">
-            <p>Autobots must <escape></escape> sight from a bounty hunter who                           has taken control of the human serendipity:                           Unexpectedly, Optimus Prime and his remaining gang                           turn to a mechanic, his daughter, and her back                           street racing boyfriend for help.</p>
+            <p>Autobots must <escape></escape> sight from a bounty hunter who has taken control of the human serendipity: Unexpectedly, Optimus Prime and his remaining gang turn to a mechanic, his daughter, and her back street racing boyfriend for help.</p>
             <p><b>Director: </b>Michael Bay</p>
             <p><b>Rating: </b>PG-13</p>
             <p><b>Duration: </b>2h 45min</p>
@@ -100,7 +106,7 @@
         </div>
 
         <div class="modal-body">
-            <p>Arthur Bishop thought he had put his murderous past                           behind him when his most formidable foe kidnaps the                           love of his life. Now he is forced to travel the                           globe to complete three impossible assassinations,                           and do what he does best, make them look like                           accidents.</p>
+            <p>Arthur Bishop thought he had put his murderous past behind him when his most formidable foe kidnaps the love of his life. Now he is forced to travel the globe to complete three impossible assassinations, and do what he does best, make them look like accidents.</p>
             <p><b>Director: </b>Dennis Gansel</p>
             <p><b>Rating: </b>R</p>
             <p><b>Duration: </b>2h 15min</p>
@@ -127,7 +133,7 @@
         </div>
 
         <div class="modal-body">
-            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
+            <p>The friendly-but-forgetful blue tang fish reunites with her loved ones, and everyone learns a few things about the real meaning of family along the way.</p>
             <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
             <p><b>Rating: </b>PG</p>
             <p><b>Duration: </b>1h 43min</p>
@@ -150,73 +156,19 @@
     <!-- Modal content-->
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title">Finding Dory</h4>
+            <h4 class="modal-title">The Conjuring 2</h4>
         </div>
 
         <div class="modal-body">
-            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
-            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
-            <p><b>Rating: </b>PG</p>
-            <p><b>Duration: </b>1h 43min</p>
-            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
+            <p>Lorraine and Ed Warren travel to north London to help a single mother raising four children alone in a house plagued by a malicious spirit.</p>
+            <p><b>Director: </b>James Wan</p>
+            <p><b>Rating: </b>R</p>
+            <p><b>Duration: </b>2h 14min</p>
+            <p><b>Genre: </b>Horror, Mystery, Thriller</p>
         </div>
 
         <div class="modal-footer">
-            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
-        </div>
-</div>
-
-</div>
-</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="modal_4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-<div class="modal-dialog" role="document">
-<div class="modal-content">
-    <!-- Modal content-->
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title">Finding Dory</h4>
-        </div>
-
-        <div class="modal-body">
-            <p>The friendly-but-forgetful blue tang fish reunites                          with her loved ones, and everyone learns a few                          things about the real meaning of family along                          the way.</p>
-            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
-            <p><b>Rating: </b>PG</p>
-            <p><b>Duration: </b>1h 43min</p>
-            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
-        </div>
-
-        <div class="modal-footer">
-            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
-        </div>
-</div>
-
-</div>
-</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="modal_5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-<div class="modal-dialog" role="document">
-<div class="modal-content">
-    <!-- Modal content-->
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title">Finding Dory</h4>
-        </div>
-
-        <div class="modal-body">
-            <p>The friendly-but-forgetful blue tang fish reunites                           with her loved ones, and everyone learns a few                           things about the real meaning of family along                           the way.</p>
-            <p><b>Director: </b>Andrew Stanton, Angus MacLane</p>
-            <p><b>Rating: </b>PG</p>
-            <p><b>Duration: </b>1h 43min</p>
-            <p><b>Genre: </b>Animation, Adventure, Comedy</p>
-        </div>
-
-        <div class="modal-footer">
-            <a class="btn btn-default" href="http://www.youtube.com/watch?v=pSf-5vbVpAU" role="button" data-width="800" data-height="420">YouTube Trailer</a>
+            <a class="btn btn-default" href="http://www.youtube.com/watch?v=VFsmuRPClr4" role="button" data-width="800" data-height="420">YouTube Trailer</a>
         </div>
 </div>
 
@@ -237,7 +189,7 @@
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
 // REQUIRED: "jQuery Query Parser" plugin.
 // https://github.com/mattsnider/jquery-plugin-query-parser
