--- a/fresh_potato.html
+++ b/fresh_potato.html
@@ -3,8 +3,9 @@
 <html lang="en">
 
 <head>
+    <title>Error!</title>
     <meta charset="utf-8">
-    <title>Fresh Patato!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
